<resources>
    <string name="app_name">IDo4U</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">
        Only download attachments when manually requested
    </string>
    <string name="title_activity_create_condition">CreateConditionActivity</string>
    <string name="gps_network_not_enabled">GPS network not enabled!</string>
    <string name="open_location_settings">\"open location settings\"</string>
    <string name="Cancel">Cancel</string>
    <string name="notification_message"> Waiting for a condition to be fulfilled…</string>
    <string name="sticky_channel">stickyChannel</string>
    <string name="start_spotlight">Start Spotlight</string>
    <string name="next_tutorial_text">Next</string>
    <string name="next_target">Next Target</string>
    <string name="add_task_explanation">
        Click this button in order to start creating a new task
    </string>
    <string name="task_recycler_explanation">
        "Click any task to see its content."
    </string>
    <string name="task_switch_explanation">
        "Move a task's switch to turn it off or on."
    </string>
    <string name="title_activity_maps">Map</string>
    <string name="ok">OK</string>
    <string name="skip_tutorial">Skip Tutorial</string>
    <string name="choose_location_tutorial">
        In this screen, you\'ll choose a \"condition area\":
        when you\'re inside this area your task\'s actions will be performed!
    </string>
    <string name="drag_marker_tutorial">
        Long-press the marker and drag it to the center of you condition area
    </string>
    <string name="radius_bar_tutorial">
       Slide this bar to choose the radius of the condition area.
    </string>
    <string name="approve_location_tutorial">
      Press this button to approve the condition area.
    </string>
    <string name="task_name_tutorial">
        "Enter the name of you task here (for example: \"Enter Home\")"
    </string>
    <string name="task_cond_info_tutorial">
        "Here You\'ll see information about the condition of this task."
    </string>
    <string name="task_add_condit_tutorial">
        "Press this button in order to add a new condition (or replace the existing one). "
        "Each task can only have one condition."
    </string>
    <string name="task_actions_info_tut">
         "Here you\'ll see information about the actions of this task."
    </string>
    <string name="task_add_action_tutorial">
            "Press this button in order to add a new action to the task - each task can have several actions"
    </string>
    <string name="choose_wifi_tutorial">
           "In this screen you\'ll chose a WiFi connection. When your device will connect a WiFi"
            "connection with the chosen name this task\'s action will be performed."
    </string>
    <string name="type_wifi_tutorial">
        "You can type here the Wifi connection\'s name yourself."
    </string>
    <string name="choose_ready_wifi_tutorial">
        "OR you can choose from this list of close WiFi connections (if there are any)."
        "You will see options here the first time you\'ll enter this screen AFTER you\'ve approved location tracking."
    </string>
    <string name="choose_a_condition">Choose A Condition</string>
    <string name="sample_task">Sample Task</string>
    <string name="menu_item_icon">menu item icon</string>
    <string name="enter_task_title">Enter Task Title</string>
    <string name="condition">Condition</string>
    <string name="add_a_condition">Add a condition</string>
    <string name="add_condition">Add Condition</string>
    <string name="actions">Actions</string>
    <string name="add_an_action">Add actions that will happen when the condition is met</string>
    <string name="add_action">Add Action</string>
    <string name="apply">Apply</string>
    <string name="sample_menu_item">Sample Menu Item</string>
    <string name="edit_condition">Edit Condition</string>
    <string name="title_activity_choose_wifi">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="enter_or_choose_a_network">Choose Network Or Type Manually</string>
    <string name="enter_wifi_network_name">Tap Here To Enter Network Manually</string>
    <string name="confirm">Confirm</string>
    <string name="no_results_found_wifi">No results found, try turning on the Wi-Fi if it\'s off</string>
    <string name="no_results_found_bluetooth">No results found, try turning on the bluetooth if it\'s off</string>
    <string name="enter_bluetooth_device_name">Tap Here To Enter Device Name Manually</string>
    <string name="enter_or_choose_a_device">Choose Device Or Type Manually</string>
    <string name="choose_an_action">Choose an Action To Perform</string>
    <string name="choose_one_volume_action">Choose One Volume Action</string>
    <string name="put_phone_on_vibrate">Put Phone On Vibrate</string>
    <string name="put_phone_on_mute">Put Phone On Mute</string>
    <string name="set_custom_volume_level">Set Custom Volume Level</string>
    <string name="set_desired_brightness_level">Set Desired Brightness Level</string>
    <string name="drag_the_slider_to_the_desired_brightness_level">Drag the Slider to the Desired Brightness Level</string>
    <string name="delete_task">Delete Task</string>
    <string name="choose_a_location_and_a_radius">Choose a Location and a Radius</string>
    <string name="volume_icon">Volume Icon</string>
    <string name="mute_icon">Mute Icon</string>
    <string name="vibrate_icon">Vibrate Icon</string>
</resources>