<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChooseWifiActivity"
    android:background="@color/colorPrimary"
    >

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/enter_or_choose_a_network"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorBackGroundDarker"
        app:layout_constraintBottom_toTopOf="@+id/confirm_wifi_network_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/choose_wifi_edit_text"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginTop="1dp"
            android:autofillHints="The task title"
            android:background="@color/colorBackGround"
            android:hint="@string/enter_wifi_network_name"
            android:inputType="text"
            android:padding="10dp" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/confirm_wifi_network_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/confirm"
        android:textSize="12sp"
        app:backgroundTint="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/scrollView3" />

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="544dp"
        android:padding="10dp"
        android:background="@color/colorBackGround"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:id="@+id/choose_wifi_linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/no_results_found"/>
        </LinearLayout>
    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>